--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="<https://fonts.gstatic.com>" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,22 +18,22 @@
   <body>
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./mainpage.html">
-          <span class="accent">Web</span>Studio</a
+        <a class="logo link" href="./index.html">
+          <span class="accent">Web</span><span>Studio</span></a
         >
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="">Portfolio</a>
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address-style">
         <ul class="list">
           <li>
             <a class="contact-mail link" href="mailto:info@devstudio.com"
@@ -59,7 +59,7 @@
 
       <section>
         <!-- Прихований заголовок -->
-        <h2 hidden>our benefits</h2>
+        <h2 class="titles-sections" hidden>our benefits</h2>
         <ul class="list">
           <li>
             <h3 class="titles-sections">Strategy</h3>
@@ -127,7 +127,7 @@
       <section class="back-color-team">
         <h2 class="about-us">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-list">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Product Designer"
@@ -137,7 +137,7 @@
             <h3 class="titles-sections">Mark Guerrero</h3>
             <p class="section-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/tom-ford.jpg"
               alt="Frontend Developer"
@@ -147,7 +147,7 @@
             <h3 class="titles-sections">Tom Ford</h3>
             <p class="section-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/camila-garcia.jpg"
               alt="Marketing"
@@ -157,7 +157,7 @@
             <h3 class="titles-sections">Camila Garcia</h3>
             <p class="section-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/daniel-wilson.jpg"
               alt="UI Designer"
@@ -171,8 +171,8 @@
       </section>
     </main>
     <footer class="back-color-footer">
-      <a class="logo logo-light link" href="./mainpage.html"
-        ><span class="accent">Web</span>Studio</a
+      <a class="logo logo-light link" href="./index.html"
+        ><span class="accent">Web</span><span>Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
