--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./index.html">
-          <span class="accent">Web</span><span>Studio</span></a
+        <a class="logo link" href="./index.html"
+          >Web<span class="accent">Studio</span></a
         >
         <ul class="menu list">
           <li class="menu-item">
@@ -36,12 +36,12 @@
       <address class="address-style">
         <ul class="list">
           <li>
-            <a class="contact-mail link" href="mailto:info@devstudio.com"
+            <a class="contacts-style link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-tel link" href="tel:+110001111111"
+            <a class="contacts-style link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -171,9 +171,10 @@
       </section>
     </main>
     <footer class="back-color-footer">
-      <a class="logo logo-light link" href="./index.html"
-        ><span class="accent">Web</span><span>Studio</span></a
-      >
+      <a class="logo link" href="./index.html"
+        >Web<span class="accent-footer">Studio</span>
+      </a>
+
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
