--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="page-header">
       <nav class="page-navigation">
         <a class="logo link" href="./portfolio.html"
-          ><span class="accent">Web</span>Studio</a
+          >Web<span class="accent">Studio</span></a
         >
         <ul class="menu list">
           <li class="menu-item">
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address-style">
         <ul class="list">
           <li>
             <a class="contact-mail list link" href="mailto:info@devstudio.com"
@@ -152,9 +152,9 @@
       </section>
     </main>
     <footer class="back-color-footer">
-      <a class="logo logo-light link" href="./portfolio.html"
-        ><span class="accent">Web</span>Studio</a
-      >
+      <a class="logo link" href="./index.html"
+        >Web<span class="accent-footer">Studio</span>
+      </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
