--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,12 @@
       <address class="address-style">
         <ul class="list">
           <li>
-            <a class="contact-mail list link" href="mailto:info@devstudio.com"
+            <a class="contacts-style list link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-tel list link" href="tel:+110001111111"
+            <a class="contacts-style list link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -59,94 +59,112 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./images/banking.jpg"
-              alt="banking interface"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Banking App Interface Concept</h2>
-            <p class="section-description">App</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/banking.jpg"
+                alt="banking interface"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Banking App Interface Concept</h2>
+              <p class="section-description">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/cashless.jpg"
-              alt="smartphone"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Cashless Payment</h2>
-            <p class="section-description">Marketing</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/cashless.jpg"
+                alt="smartphone"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Cashless Payment</h2>
+              <p class="section-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/meditation.jpg"
-              alt="laptop"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Meditation App</h2>
-            <p class="section-description">App</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/meditation.jpg"
+                alt="laptop"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Meditation App</h2>
+              <p class="section-description">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/taxi.jpg"
-              alt="steering wheel"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Taxi Service</h2>
-            <p class="section-description">Marketing</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/taxi.jpg"
+                alt="steering wheel"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Taxi Service</h2>
+              <p class="section-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/screen.jpg"
-              alt="smartphone screen"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Screen Illustrations</h2>
-            <p class="section-description">Design</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/screen.jpg"
+                alt="smartphone screen"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Screen Illustrations</h2>
+              <p class="section-description">Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="smiling girl"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Online Courses</h2>
-            <p class="section-description">Marketing</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/online-courses.jpg"
+                alt="smiling girl"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Online Courses</h2>
+              <p class="section-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/insta.jpg"
-              alt="advertising example"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Instagram Stories Concept</h2>
-            <p class="section-description">Design</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/insta.jpg"
+                alt="advertising example"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Instagram Stories Concept</h2>
+              <p class="section-description">Design</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/organic-food.jpg"
-              alt="fruit bag"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Organic Food</h2>
-            <p class="section-description">Web Site</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/organic-food.jpg"
+                alt="fruit bag"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Organic Food</h2>
+              <p class="section-description">Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/coffee.jpg"
-              alt="a cup of coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="titles-sections">Fresh Coffee</h2>
-            <p class="section-description">Web Site</p>
+            <a class="link" href="./portfolio.html"
+              ><img
+                src="./images/coffee.jpg"
+                alt="a cup of coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="titles-sections">Fresh Coffee</h2>
+              <p class="section-description">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
